--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
     - name: Checkout target repo
       uses: actions/checkout@v4
       with:
+        fetch-depth: 0
         persist-credentials: false
     - uses: aormsby/Fork-Sync-With-Upstream-action@v3.4.1
       with:
@@ -28,6 +29,8 @@ jobs:
         upstream_sync_branch: main
         upstream_sync_repo: spliit-app/spliit
         upstream_repo_access_token: ${{ secrets.UPSTREAM_REPO_SECRET }}
+    - name: apply my patches
+      run: git checkout master-patch -- manifest.webmanifest screenshot-wide.jpg screenshot.jpg
 
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag ghcr.io/aleritty/spliit:latest
