--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,8 @@ jobs:
         upstream_sync_branch: main
         upstream_sync_repo: spliit-app/spliit
         upstream_repo_access_token: ${{ secrets.UPSTREAM_REPO_SECRET }}
-    - name: apply my patches
-      run: git checkout main-patch -- manifest.webmanifest screenshot-wide.jpg screenshot.jpg
+    # - name: apply my patches
+    #   run: git checkout main-patch -- manifest.webmanifest screenshot-wide.jpg screenshot.jpg
 
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag ghcr.io/aleritty/spliit:latest
