fix broken docker build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,8 @@ jobs:
         upstream_repo_access_token: ${{ secrets.UPSTREAM_REPO_SECRET }}
     # - name: apply my patches
     #   run: git checkout main-patch -- manifest.webmanifest screenshot-wide.jpg screenshot.jpg
-
+    - name: Build the Docker image (prerequisite)
+      run: cp next.config.mjs next.config.js
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag ghcr.io/aleritty/spliit:latest
     - name: Log in to the Container registry
